# telegram-webapp-backend

./: .gitignore  main.py  pyproject.toml
src/: CONSTANTS.py  __init__.py  app.py  body_models.py  bot.py  db.py  db.sqlite3  db_models.py  models.py  telegram_models.py
src/dependencies/: dependencies.py
src/models/: body_models.py
src/routes/: calendar.py  task.py  user.py
