[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for telegram calendar"
authors = ["hillow <andrew.hillow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.1"
python-telegram-bot = "^20.0"
aiosqlite = "^0.18.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
